scripts/lan/iptables
# Generated by iptables-save v1.4.14 on Fri Jan 25 14:18:56 2013
*filter
:INPUT DROP [8:3079]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:BAN_HADOPI - [0:0]
:DROP_HADOPI - [0:0]
:HTTPD - [0:0]
:ICMP - [0:0]
:IRC_I - [0:0]
:IRC_O - [0:0]
:OPENVPN - [0:0]
:SAMBA - [0:0]
:SAMBA_TUN - [0:0]
:SSH_BF - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,PSH,URG FIN,PSH,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -j BAN_HADOPI
-A INPUT -j ICMP
-A INPUT -s 192.168.0.0/24 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -j IRC_I
-A INPUT -j HTTPD
-A INPUT -j SAMBA_TUN
-A INPUT -j OPENVPN
-A INPUT -j SAMBA
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name SSH --rsource -j SSH_BF
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -j LOG
-A FORWARD -j BAN_HADOPI
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT
-A OUTPUT -j BAN_HADOPI
-A OUTPUT -s 192.168.0.0/24 -j ACCEPT
-A OUTPUT -j IRC_O
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED,UNTRACKED -j ACCEPT
-A BAN_HADOPI -s 85.159.232.0/24 -j DROP_HADOPI
-A BAN_HADOPI -s 85.159.236.0/24 -j DROP_HADOPI
-A BAN_HADOPI -s 82.138.74.0/24 -j DROP_HADOPI
-A BAN_HADOPI -s 82.138.81.0/24 -j DROP_HADOPI
-A BAN_HADOPI -m iprange --src-range 82.138.70.128-82.138.70.191 -j DROP_HADOPI
-A BAN_HADOPI -m iprange --src-range 91.189.104.0-91.189.111.255 -j DROP_HADOPI
-A BAN_HADOPI -m iprange --src-range 193.105.197.0-193.105.197.255 -j DROP_HADOPI
-A BAN_HADOPI -m iprange --src-range 193.107.240.0-193.107.243.255 -j DROP_HADOPI
-A BAN_HADOPI -m iprange --src-range 195.191.244.0-195.191.245.255 -j DROP_HADOPI
-A DROP_HADOPI -j LOG --log-prefix "TridentMedia/Hadopi:   "
-A DROP_HADOPI -j DROP
-A HTTPD -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A ICMP -p icmp -j ACCEPT
-A IRC_I -i eth0 -p tcp -m tcp --sport 6667 -j ACCEPT
-A IRC_O -o eth0 -p tcp -m tcp --dport 6667 -j ACCEPT
-A OPENVPN -i eth0 -p udp -m udp --dport 1194 -j ACCEPT
-A OPENVPN -i eth0 -p tcp -m tcp --dport 1194 -j ACCEPT
-A SAMBA -i eth0 -p tcp -m tcp --sport 139 -j DROP
-A SAMBA -i eth0 -p tcp -m tcp --sport 443 -j DROP
-A SAMBA -i eth0 -p tcp -m tcp --sport 445 -j ACCEPT
-A SAMBA -i eth0 -p udp -m udp --sport 123 -j DROP
-A SAMBA_TUN -i tun0 -p tcp -m tcp --dport 445 -j ACCEPT
-A SAMBA_TUN -i tun0 -p tcp -m tcp --dport 139 -j ACCEPT
-A SSH_BF -m recent ! --rcheck --seconds 60 --hitcount 5 --name SSH --rsource -j RETURN
-A SSH_BF -j LOG --log-prefix "SSH Brute Force Attempt:  "
-A SSH_BF -p tcp -j DROP
COMMIT
# Completed on Fri Jan 25 14:18:56 2013
